# GrainSet

./: .gitignore  main.py  pyproject.toml
configs/: wheat.yaml
notebooks/: GrainSet_demo.ipynb
src/: train.py
src/config/: setting.py
src/datasets/: augment.py  reader.py
src/solver/: loss.py
src/utils/: init_project.py
